bug: rmv extra margin-right

--- a/src/scss/skill-set.scss
+++ b/src/scss/skill-set.scss
@@ -72,8 +72,12 @@
     margin-bottom: 50px;
 
     @include breakpoint($desktop) {
-      margin: 0 50px 0 0;
+      margin: 0;
       width: 33%;
+
+      &:not(:last-child) {
+        margin: 0 50px 0 0;
+      }
     }
 
     p {
